deployment/kubernetes/governance_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: governance-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: governance

  template:
    metadata:
      labels:
        app: governance

    spec:
      containers:
      - name: governance

        image: enterprise/governance:latest

        ports:
        - containerPort: 8003

---
apiVersion: v1
kind: Service

metadata:
  name: governance-service

spec:
  selector:
    app: governance

  ports:
  - port: 80
    targetPort: 8003

  type: ClusterIP
