deployment/kubernetes/inventory_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: inventory-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: inventory

  template:
    metadata:
      labels:
        app: inventory

    spec:
      containers:
      - name: inventory

        image: enterprise/inventory:latest

        ports:
        - containerPort: 8001

---
apiVersion: v1
kind: Service

metadata:
  name: inventory-service

spec:
  selector:
    app: inventory

  ports:
  - port: 80
    targetPort: 8001

  type: ClusterIP
