deployment/kubernetes/search_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: search-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: search

  template:
    metadata:
      labels:
        app: search

    spec:
      containers:
      - name: search

        image: enterprise/search:latest

        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service

metadata:
  name: search-service

spec:
  selector:
    app: search

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
